force-app/main/default/objects/C360_Customer_360__c/C360_Customer_360__c.object-meta.xml
<CustomObject>
    <label>Customer 360</label>
    <nameField>
        <label>Customer 360 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer 360s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>