force-app/main/default/objects/C360_Customer_360__c/fields/C360_Count_S_and_I_Last_30__c.field-meta.xml
<CustomField>
    <fullName>C360_Count_S_and_I_Last_30__c</fullName>
    <description>Total count of all status and inquiry cases opened in the past 30 days . This count is performed and mapped by the 360 custom setting. 

Source field = C360_Count_of_Issues_Last_30_Days__c

Criteria for status and inquiry cases is record type = 02. Customer Inquiry and reason is not status/inquiry</description>
    <inlineHelpText>Count of all status and inquiry cases for all related accounts opened in the past 30 days.</inlineHelpText>
    <label>Status and Inquiry Last 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>