force-app/main/default/objects/C360_Customer_360__c/fields/C360_Data_Warning__c.field-meta.xml
<CustomField>
    <fullName>C360_Data_Warning__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000002lMCt&quot;, &quot;Stop&quot;,60,535)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note</label>
    <type>Text</type>
</CustomField>