force-app/main/default/objects/C360_Customer_360__c/fields/C360_Issues_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>C360_Issues_Last_30_Days__c</fullName>
    <description>Total count of all cases created in the past 30 days where the reason is not Status/Inquiry and the record type is 02. Customer Inquiry. This count is performed and mapped by the 360 custom setting. 

Source field = C360_Count_of_Issues_Last_30_Days__c</description>
    <inlineHelpText>Count of all Issue cases for related accounts created in the last 30 days.</inlineHelpText>
    <label>Issues Last 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>