force-app/main/default/objects/C360_Customer_360__c/fields/C360_Legacy_X_Accounts__c.field-meta.xml
<CustomField>
    <fullName>C360_Legacy_X_Accounts__c</fullName>
    <description>Total count of legacy x accounts from related account records. This count is performed and mapped by the 360 custom setting. 

Source field = C360_Count_of_Legacy_X_Accounts__c

Criteria for legacy x is legacy system cd contains x, account record type = customer.</description>
    <inlineHelpText>Total count of all related legacy x accounts.</inlineHelpText>
    <label>Legacy X Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>