force-app/main/default/objects/C360_Customer_360__c/fields/C360_National_Account__c.field-meta.xml
<CustomField>
    <fullName>C360_National_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines whether or not the 360 record is a reference to a national account or not.  This field will be populated by users manually.</description>
    <inlineHelpText>Is this Customer 360 a national account?</inlineHelpText>
    <label>National Account</label>
    <type>Checkbox</type>
</CustomField>