force-app/main/default/objects/C360_Customer_360__c/fields/C360_National_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>C360_National_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated manually by users to reference the national account manager if the account is qualified as such.  This is a lookup to User with no filter in version 1.0.</description>
    <inlineHelpText>If the 360 is referencing a national account, search for the account manager.</inlineHelpText>
    <label>National Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>National_Account</relationshipName>
    <type>Lookup</type>
</CustomField>