force-app/main/default/objects/C360_Customer_360__c/fields/C360_Open_Packaging_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>C360_Open_Packaging_Opportunities__c</fullName>
    <description>Total sum of related packaging segment open opportunity records. This count is performed and mapped by the 360 custom setting. 

Source field = C360_Sum_of_Packaging_Opps__c. 

Criteria for open packaging is opportunity segment = packaging and stage is not equal to closed.</description>
    <inlineHelpText>Total Annual Opportunity Revenue of all open packaging opportunities</inlineHelpText>
    <label>Open Packaging Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>