force-app/main/default/objects/C360_Customer_360__c/fields/C360_Open_Publishing_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>C360_Open_Publishing_Opportunities__c</fullName>
    <description>Total sum of amount of related open opportunity records. This sum is performed and mapped by the 360 custom setting. 

Source field = C360_Sum_of_Open_Publishing_Opps__c

Criteria for open new business is opportunity segment = Publishing, stage is not closed.</description>
    <inlineHelpText>Total Annual Opportunity Revenue of all open publishing opportunities</inlineHelpText>
    <label>Open Publishing Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>