force-app/main/default/objects/C360_Customer_360__c/fields/C360_Packaging_NAM__c.field-meta.xml
<CustomField>
    <fullName>C360_Packaging_NAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated manually by users to reference the packaging national account manager if the account is qualified as such.</description>
    <inlineHelpText>If the 360 is referencing a national account, search for the Packaging National Account Manager.</inlineHelpText>
    <label>Packaging NAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_360s1</relationshipName>
    <type>Lookup</type>
</CustomField>