force-app/main/default/objects/C360_Customer_360__c/fields/C360_Prospect_Accounts__c.field-meta.xml
<CustomField>
    <fullName>C360_Prospect_Accounts__c</fullName>
    <description>Total count of prospect accounts from related account records. This count is performed and mapped by the 360 custom setting. 

Source field = C360_Count_of_Prospects__c. 

Criteria for prospect accounts is account record type = prospect.</description>
    <inlineHelpText>Total count of all related prospect accounts.</inlineHelpText>
    <label>Prospect Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>