force-app/main/default/objects/C360_Customer_360__c/fields/C360_Quotes_Created_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>C360_Quotes_Created_Last_30_Days__c</fullName>
    <description>Total count of quotes created in the past 30 days . This count is performed and mapped by the 360 custom setting. 

Source field = C360_Count_Created_Last_30_Days__c

Criteria for created quote is created date - today &lt;=30.</description>
    <inlineHelpText>Count of all quotes created in the last 30 days for related accounts.</inlineHelpText>
    <label>Quotes Created Last 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>