force-app/main/default/objects/C360_Customer_360__c/fields/C360_Quotes_Expired_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>C360_Quotes_Expired_Last_30_Days__c</fullName>
    <description>Total count of quotes expired in the past 30 days . This count is performed and mapped by the 360 custom setting. 

Source field = C360_Count_Expired_Last_30_Days__c

Criteria for expired quotes is expired date - today &lt;=30.</description>
    <inlineHelpText>Count of all expired quotes in the past 30 days for related accounts</inlineHelpText>
    <label>Quotes Expired Last 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>