force-app/main/default/objects/C360_Customer_360__c/fields/C360_Sum_of_Closed_Opps_This_Year__c.field-meta.xml
<CustomField>
    <fullName>C360_Sum_of_Closed_Opps_This_Year__c</fullName>
    <description>Total count of all related closed opportunities this year . This count is performed and mapped by the 360 custom setting. 

Source field = C360_Sum_of_Closed_This_Year__c

Criteria for closed this year is stage = closed and close date is this year.</description>
    <label>Sum of Closed Opps This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>