force-app/main/default/objects/C360_Customer_360__c/fields/C360_Sum_of_Closed_Won_This_Year__c.field-meta.xml
<CustomField>
    <fullName>C360_Sum_of_Closed_Won_This_Year__c</fullName>
    <description>Total count of all related closed won opportunities this year . This count is performed and mapped by the 360 custom setting. 

Source field = C360_Sum_of_Closed_Won_This_Year__c

Criteria for closed won this year is stage = closed won and close date is this year.</description>
    <inlineHelpText>Sum of annual opportunity revenue of all won opportunities this calendar year.</inlineHelpText>
    <label>Sum of Closed/Won This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>