force-app/main/default/objects/C360_Customer_360__c/fields/C360_Sum_of_Open_Def_Bus__c.field-meta.xml
<CustomField>
    <fullName>C360_Sum_of_Open_Def_Bus__c</fullName>
    <description>Total sum of related defending and open opportunity records. This sum is performed and mapped by the 360 custom setting. 

Source field = C360_Sum_of_Open_Defending_Business__c. 

Criteria for open defending business is opportunity type = defending and stage is not closed.</description>
    <inlineHelpText>Sum of amount for all related open opportunities.</inlineHelpText>
    <label>Open Defending Business Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>