force-app/main/default/objects/C360_Customer_360__c/fields/C360_Sum_of_Open_New__c.field-meta.xml
<CustomField>
    <fullName>C360_Sum_of_Open_New__c</fullName>
    <description>Total sum of amount of related open opportunity records. This sum is performed and mapped by the 360 custom setting. 

Source field = C360_Sum_of_Open_New_Business__c. 

Criteria for open new business is opportunity type = new business, stage is not closed.</description>
    <inlineHelpText>Sum of amount for all related open opportunities.</inlineHelpText>
    <label>Open New Business Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>