force-app/main/default/objects/C360_Customer_360__c/fields/C360_Total_Accounts__c.field-meta.xml
<CustomField>
    <fullName>C360_Total_Accounts__c</fullName>
    <description>This is a formula adding the total Legacy U, X, and prospect accounts</description>
    <formula>C360_Legacy_U_Accounts__c + C360_Legacy_X_Accounts__c + C360_Prospect_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a formula adding the total Legacy U, X, and prospect accounts</inlineHelpText>
    <label>Total Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>