force-app/main/default/objects/C360_Customer_360__c/fields/C360_Total_Value_Open_Oppt__c.field-meta.xml
<CustomField>
    <fullName>C360_Total_Value_Open_Oppt__c</fullName>
    <description>Total sum of the open amounts from all related opportunity records. This count is performed and mapped by the 360 custom setting. 

Source field = C360_Sum_of_Open_Opps__c. 

Criteria for open opportunities = stage does not equal closed.</description>
    <inlineHelpText>Sum of amount of all related open opportunities.</inlineHelpText>
    <label>Total Value Open Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>