force-app/main/default/objects/C360_Customer_360__c/fields/C360_Win_Percentage_This_Year__c.field-meta.xml
<CustomField>
    <fullName>C360_Win_Percentage_This_Year__c</fullName>
    <description>Total win percentage determined by the formula logic of total closed won this year / count of closed.  Those fields are populated by the 360 custom setting.</description>
    <formula>IF (C360_Sum_of_Closed_Opps_This_Year__c &gt; 0, C360_Sum_of_Closed_Won_This_Year__c / C360_Sum_of_Closed_Opps_This_Year__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total closed won this year / total closed this year</inlineHelpText>
    <label>Win Percentage This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>